--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ yarn-debug.log*
 yarn-error.log*
 package-lock.json
 tests/**/coverage/
+miniprogram/pages/**/*.js
+miniprogram/utils/*.js
+miniprogram/app.js
+miniprogram/api/*.js
 
 # Editor directories and files
 .idea
